--- a/Spice/Spice/appsettings.json
+++ b/Spice/Spice/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Stripe": {
+    "SecretKey": "sk_test_Dwz9vjRzuoinLpunIfm0d2xM00LAP4SEhy",
+    "PublishableKey": "pk_test_5LHqyy0ZyueNXAHKO9t97xXo00jnXbzg9w"
+  }
 }
